--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@ button:hover { background:#b82c6d; }
 .hidden { display:none; }
 
 .footer-note {
-  font-weight: bold;
   margin-top: 20px;
+  font-size: 0.95em;
+  color: #555;
 }
 
 footer {
@@ -130,7 +131,7 @@ footer {
   <div class="footer-note">
     <strong>After booking, please DM @pixelnails for the following:</strong>
     <ol>
-      <li>Get e-transfer email to send your <strong>$10 NON-REFUNDABLE deposit</strong> within 24 hours (otherwise appointment will be cancelled)</li>
+      <li>Get e-transfer email to send your <strong>$10 NON-REFUNDABLE</strong> deposit within 24 hours (otherwise appointment will be cancelled)</li>
       <li>Send your inspo pic! 💖</li>
     </ol>
   </div>
