--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ footer {
   </form>
 
   <div class="footer-note">
-    <strong>After booking, please DM @pixelnails for the following:</strong>
+    <strong>After booking, please DM @pixelnailz for the following:</strong>
     <ol>
       <li>Get e-transfer email to send your <strong>$10 NON-REFUNDABLE</strong> deposit within 24 hours (otherwise appointment will be cancelled)</li>
       <li>Send your inspo pic! 💖</li>
