--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@ button:hover { background:#b82c6d; }
   font-weight: bold;
 }
 
+.cancellation-note {
+  margin-top: 20px;
+  font-weight: bold;
+  text-align: center;
+}
+
 footer {
   text-align:center;
   font-size:0.85em;
   color:#888;
   padding:15px 0;
   background:#ffe6f0;
-}
-
-.bottom-note {
-  text-align: center;
-  font-weight: bold;
-  margin-top: 10px;
 }
 
 .success { color: green; text-align: center; margin-bottom: 12px; }
@@ -142,10 +142,10 @@ footer {
       <li>Send your inspo pic! 💖</li>
     </ol>
   </div>
-</div>
 
-<div class="bottom-note">
-  Cancellations: Please dm if you would like to cancel an appointment
+  <div class="cancellation-note">
+    Cancellations: Please dm if you would like to cancel an appointment
+  </div>
 </div>
 
 <footer>© 2025 PixelNailz</footer>
