--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ footer {
   </div>
 
   <div class="cancellation-note">
-    Cancellations: Please dm if you would like to cancel an appointment
+    Cancellations: Please DM if you would like to cancel an appointment
   </div>
 </div>
 
